force-app/main/default/objects/Cancellation_Intimation__c/Cancellation_Intimation__c.object-meta.xml
<CustomObject>
    <label>Cancellation Intimation</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Cancellation Intimation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Intimations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>