force-app/main/default/objects/Cancellation_Intimation__c/fields/Amount_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Demanded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Demanded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>