force-app/main/default/objects/Cancellation_Intimation__c/fields/cc1_Email__c.field-meta.xml
<CustomField>
    <fullName>cc1_Email__c</fullName>
    <label>cc1 Email</label>
    <type>Email</type>
</CustomField>