force-app/main/default/objects/Cancellation_Intimation__c/fields/cc2_Email__c.field-meta.xml
<CustomField>
    <fullName>cc2_Email__c</fullName>
    <label>cc2 email</label>
    <type>Email</type>
</CustomField>