force-app/main/default/objects/Cancellation_Intimation__c/fields/cc3_Email__c.field-meta.xml
<CustomField>
    <fullName>cc3_Email__c</fullName>
    <label>cc3 Email</label>
    <type>Email</type>
</CustomField>