force-app/main/default/objects/Cancellation_Intimation__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cancellation Intimations</relationshipLabel>
    <relationshipName>Cancellation_Intimations</relationshipName>
    <type>Lookup</type>
</CustomField>