force-app/main/default/objects/Cancellation_Intimation__c/fields/future_correspondence_email__c.field-meta.xml
<CustomField>
    <fullName>future_correspondence_email__c</fullName>
    <label>future correspondence email</label>
    <type>Email</type>
</CustomField>