force-app/main/default/objects/Cancellation_Intimation__c/fields/Is_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Letter Sent</label>
    <type>Checkbox</type>
</CustomField>