force-app/main/default/objects/Cancellation_Intimation__c/fields/Letter_Category__c.field-meta.xml
<CustomField>
    <fullName>Letter_Category__c</fullName>
    <label>Letter Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
            <value>
                <fullName>L6</fullName>
            </value>
            <value>
                <fullName>L7</fullName>
            </value>
            <value>
                <fullName>L8</fullName>
            </value>
            <value>
                <fullName>L9</fullName>
            </value>
            <value>
                <fullName>L10</fullName>
            </value>
            <value>
                <fullName>L11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>