force-app/main/default/objects/Cancellation_Intimation__c/fields/Letter_sent_date__c.field-meta.xml
<CustomField>
    <fullName>Letter_sent_date__c</fullName>
    <label>Letter sent date</label>
    <type>Date</type>
</CustomField>