force-app/main/default/objects/Cancellation_Intimation__c/fields/Previous_Letter__c.field-meta.xml
<CustomField>
    <fullName>Previous_Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Letter</label>
    <referenceTo>Cancellation_Intimation__c</referenceTo>
    <relationshipLabel>Cancellation Intimations</relationshipLabel>
    <relationshipName>Cancellation_Intimations</relationshipName>
    <type>Lookup</type>
</CustomField>