force-app/main/default/objects/Cancellation_Intimation__c/fields/Print_Online_Version__c.field-meta.xml
<CustomField>
    <fullName>Print_Online_Version__c</fullName>
    <formula>IF( Is_Letter_Sent__c , HYPERLINK(&quot;/apex/apex/S_CancellationPage?cancelId=&quot; +Id + &quot;&amp;letterhead=true&amp;mode=view&quot;,&quot;Click Here&quot;), &apos;Not generated&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Online Version</label>
    <type>Text</type>
</CustomField>