force-app/main/default/objects/Cancellation_Intimation__c/fields/Sent_By_User__c.field-meta.xml
<CustomField>
    <fullName>Sent_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cancellation_Intimations</relationshipName>
    <type>Lookup</type>
</CustomField>